updated common.sh to auto‑correct the path

--- a/main_analysis/config/run.env
+++ b/main_analysis/config/run.env
@@ -1,4 +1,5 @@
 # Main analysis configuration
+# Default paths (auto-corrected if invalid)
 export PROJECT_ROOT="/mnt/f/research_drive/mtdna/leelab/mtDNA-analysis"
 export ANALYSIS_ROOT="${PROJECT_ROOT}/main_analysis"
 export RUNS_DIR="${ANALYSIS_ROOT}/runs"
