--- a/main_analysis/config/run.env
+++ b/main_analysis/config/run.env
@@ -23,3 +23,10 @@ export LIST_DIR="${PROJECT_ROOT}/mtDNA_v25_pilot_5"
 # Workspace settings (should already be set in AoU)
 export WORKSPACE_BUCKET="${WORKSPACE_BUCKET:-}"
 export GOOGLE_PROJECT="${GOOGLE_PROJECT:-}"
+
+# Stage 02 uploads (optional local sources)
+# If AUTO_UPLOAD_STAGE02_INPUTS=1, 00_preflight_check.sh will run the upload helper.
+export AUTO_UPLOAD_STAGE02_INPUTS="${AUTO_UPLOAD_STAGE02_INPUTS:-0}"
+export HAPLOCHECK_ZIP_LOCAL="${HAPLOCHECK_ZIP_LOCAL:-${PROJECT_ROOT}/mtSwirl/haplocheck.zip}"
+export BLACKLIST_BED_LOCAL="${BLACKLIST_BED_LOCAL:-}"
+export BLACKLIST_BED_IDX_LOCAL="${BLACKLIST_BED_IDX_LOCAL:-}"
