updated planner for stages, added stage 03

--- a/main_analysis/config/run.env
+++ b/main_analysis/config/run.env
@@ -30,3 +30,10 @@ export AUTO_UPLOAD_STAGE02_INPUTS="${AUTO_UPLOAD_STAGE02_INPUTS:-0}"
 export HAPLOCHECK_ZIP_LOCAL="${HAPLOCHECK_ZIP_LOCAL:-${PROJECT_ROOT}/mtSwirl/haplocheck.zip}"
 export BLACKLIST_BED_LOCAL="${BLACKLIST_BED_LOCAL:-}"
 export BLACKLIST_BED_IDX_LOCAL="${BLACKLIST_BED_IDX_LOCAL:-}"
+
+# Stage 03 uploads (optional local sources)
+# If AUTO_UPLOAD_STAGE03_INPUTS=1, 00_preflight_check.sh will run the upload helper.
+export AUTO_UPLOAD_STAGE03_INPUTS="${AUTO_UPLOAD_STAGE03_INPUTS:-0}"
+export FA_RENAMING_SCRIPT_LOCAL="${FA_RENAMING_SCRIPT_LOCAL:-${PROJECT_ROOT}/compatibilify_fa_intervals_consensus.R}"
+export CHECK_VARIANT_BOUNDS_LOCAL="${CHECK_VARIANT_BOUNDS_LOCAL:-${PROJECT_ROOT}/check_variant_bounds.R}"
+export CHECK_HOM_OVERLAP_LOCAL="${CHECK_HOM_OVERLAP_LOCAL:-${PROJECT_ROOT}/check_overlapping_homoplasmies.R}"
