finale mtheteroplasmy workflow refactoring

--- a/main_analysis/config/run.env
+++ b/main_analysis/config/run.env
@@ -20,6 +20,10 @@ export WDL_DEPS_SRC="${PROJECT_ROOT}/mtSwirl/WDL/v2.5_MongoSwirl_Single"
 # Sample list directory (where sample_list*.txt, cram_file_list*.txt, crai_file_list*.txt live)
 export LIST_DIR="${PROJECT_ROOT}/mtDNA_v25_pilot_5"
 
+# Global skip behavior
+# If SKIP_ALREADY_PROCESSED=1, stages with prior Succeeded entries in samples_status.tsv are reused.
+export SKIP_ALREADY_PROCESSED="${SKIP_ALREADY_PROCESSED:-1}"
+
 # Workspace settings (should already be set in AoU)
 export WORKSPACE_BUCKET="${WORKSPACE_BUCKET:-}"
 export GOOGLE_PROJECT="${GOOGLE_PROJECT:-}"
