main_workflow_v2.sh reads BATCH_SIZE and BATCH_INDEX from run.env

--- a/main_analysis/config/run.env
+++ b/main_analysis/config/run.env
@@ -24,6 +24,10 @@ export LIST_DIR="${PROJECT_ROOT}/mtDNA_v25_pilot_5"
 # If SKIP_ALREADY_PROCESSED=1, stages with prior Succeeded entries in samples_status.tsv are reused.
 export SKIP_ALREADY_PROCESSED="${SKIP_ALREADY_PROCESSED:-1}"
 
+# Optional batch controls for main_workflow_v2.sh (leave empty to process all)
+export BATCH_SIZE="${BATCH_SIZE:-}"
+export BATCH_INDEX="${BATCH_INDEX:-}"
+
 # Workspace settings (should already be set in AoU)
 export WORKSPACE_BUCKET="${WORKSPACE_BUCKET:-}"
 export GOOGLE_PROJECT="${GOOGLE_PROJECT:-}"
